# valiss-py

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
examples/: grpc_server.py  grpcauth.py  httpauth.py  verify_request.py  verify_tooling.py
src/valiss/: __init__.py  allowlist.py  chain.py  creds.py  errors.py  grpcauth.py  httpauth.py  keyring.py  message.py  nkeys.py  replay.py  token.py  verifier.py
src/valiss/grpcauth/: __init__.py  _client.py  extension.py  interceptor.py
tests/: test_allowlist_replay.py  test_creds.py  test_grpcauth.py  test_grpcauth_interceptor.py  test_httpauth.py  test_interop.py  test_keyring.py  test_nkeys.py  test_token.py  test_verifier.py
tests/interop/: go.mod  go.sum  main.go
