[project]
name = "valiss"
version = "0.4.0"
description = "Client library for valiss tenant authentication: nkey-signed HTTP and gRPC requests (wire spec 1)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Lukianchenko" }]
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.urls]
Repository = "https://github.com/valiss-dev/valiss-py"
Upstream = "https://github.com/valiss-dev/valiss-go"
Spec = "https://github.com/valiss-dev/spec"

[project.optional-dependencies]
grpc = ["grpcio>=1.60"]
httpx = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "pytest>=8",
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "httpx>=0.27",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valiss"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src/valiss"]
# httpauth/grpcauth are the optional-extra client transports; their
# import-guarded httpx/grpc shims predate the type gate and are retyped when
# they become packages (the server middleware / interceptor work). The pure
# core — token, message, creds, nkeys, errors, verifier, allowlist, replay —
# is checked, and the new server-side modules opt into strict via a
# `# pyright: strict` file header.
exclude = ["src/valiss/httpauth.py", "src/valiss/grpcauth.py"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
